plugins {
    id 'org.owasp.dependencycheck' version '5.1.0'
    id 'scala'
    id 'com.github.lkishalmi.gatling' version '3.0.2'
    id 'java-gradle-plugin'
    id 'groovy'
    id 'com.gradle.plugin-publish' version '0.9.8'
    id 'maven-publish'
}

//apply plugin: 'java'
apply plugin: 'scala'
group 'uk.gov.hmcts.reform'
version = '1.0'

tasks.withType(JavaExec) {
    jvmArgs = ['-Xms512m', '-Xmx1024m', '-XX:+UseConcMarkSweepGC']
}

sourceCompatibility = "11"
targetCompatibility = "11"

jar {
    manifest {
        attributes 'Implementation-Title': 'EXUI Performance Tests',
                'Implementation-Version': version
    }
}

/*dependencyCheck {
    // Specifies if the build should be failed if a CVSS score above a specified level is identified.
    // range of 0-10 fails the build, anything greater and it doesn't fail the build
    failBuildOnCVSS = System.getProperty('dependencyCheck.failBuild') == 'true' ? 0 : 11
    suppressionFile = 'dependency-check-suppressions.xml'
}*/

repositories {
    jcenter()
}

ext {
    gatlingVersion = '3.3.1'
    scalaVersion = '2.13.3'
    simulations = [ 'uk.gov.hmcts.reform.role_assignment.performance.simulations.RoleAssignmentSimulation'
    ]
}

dependencies {
    testCompile group: 'org.scala-lang', name: 'scala-library', version: scalaVersion
    testCompile group: 'io.gatling.highcharts', name: 'gatling-charts-highcharts', version: gatlingVersion
    testCompile group: 'io.gatling', name: 'gatling-app', version: gatlingVersion
    gatlingCompile group: 'io.rest-assured', name: 'rest-assured', version: '4.3.1'
    gatlingCompile 'com.warrenstrange:googleauth:1.5.0'
    gatlingRuntime group: 'io.gatling.highcharts', name: 'gatling-charts-highcharts', version: gatlingVersion
}


test {
    testLogging {
        showStandardStreams = true
    }
    dependsOn("publishToMavenLocal")
    systemProperty "com.github.lkishalmi.gatling.version", project.version
}

pluginBundle {
    website = 'https://github.com/lkishalmi/gradle-gatling-plugin'
    vcsUrl = 'https://github.com/lkishalmi/gradle-gatling-plugin'
    description = 'Gatling Simulation Execution'
    tags = ['gatling', 'load test', 'stress test', 'performance test', 'scala']
}

ext ['netty.version'] = '4.0.51.Final'
